# python_template

./: .gitignore  build.ps1  build_linux.sh  build_windows.ps1  main.py  setup_new_project.ps1  setup_new_project_linux.sh  test_example.py
ExampleProject/: .pre-commit-config.yaml  pyproject.toml
ExampleProject/src/exampleproject/: main.py
ExampleProject/tests/: test_example.py
