[project]
name = "exampleproject"
version = "0.1.0"
description = ""
authors = [
    {name = "easox_gmbh",email = "robin.delimar@hispeed.ch"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "exampleproject", from = "src"}]


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.1.0"
pytest = "^8.3.4"
pytest-timeout = "^2.3.1"


[tool.poetry.group.build.dependencies]
setuptools = "^75.8.1"
pyinstaller = "^6.12.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
[tool.ruff]
# Enable isort-compatible import sorting
extend_select = ["I"]
# Optionally enable automatic unused imports removal with autofix:
fix = true
